Добавлен поисковик для доктора
